# spade

./: .gitignore  .travis.yml  AUTHORS.rst  Agent.py  Agente.py  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ChangeLog  Containerfile  DEPENDENCIES.txt  HISTORY.rst  InstallWin.py  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  agent.py  configure.py  dev.cfg  doap.xml  empaqueta.sh  gspade.py  gspade.sh  index.html  message.py  params.json  pingagent.py  pingserver.py  pyproject.toml  pytest.ini  readme.txt  readthedocs.yml  recv.py  requirements.txt  requirements_dev.txt  rma.py  run-agent.py  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-publish.yml  python-package.yml
.woodpecker/: container-ci.yaml  test-integration.yml  test.yml
api/: index.html
api/private/: __builtin__.type-class.html  exceptions.Exception-class.html  spade.AMS-module.html  spade.AMS.AMS-class.html  spade.AMS.ModifyBehaviour-class.html  spade.AMS.RegisterBehaviour-class.html  spade.AMS.SearchBehaviour-class.html  spade.Agent.deregisterServiceBehaviour-class.html  spade.Agent.getPlatformInfoBehaviour-class.html  spade.FIPAMessage-module.html  (+94 more)
autopackage/: default.apspec
doc/: Makefile  gpl.tex  tia.tex
docs/: .gitignore  Makefile  agents.rst  api.rst  behaviours.rst  conf.py  extending.rst  foreword.rst  index.rst  installation.rst  license.rst  make.bat  model.rst  presence.rst  requirements.txt  spade.rst  usage.md  usage.rst  web.rst
etc/: configure.py  jabber.xml  jabber.xml.template.xml  spade.ini  spade.ini.old  spade.xml
examples/: OracleAgent.py  agent_inside_agent.py  amsTestCase.py  auctioner.py  basic.py  basicTestCase.py  bdiTestCase.py  bidder.py  client.js  coTestCase.py  counter_behav.py  dfTestCase.py  dummyagent.py  dummybehavior.py  echo_component.py  emissor-gus.py  emissor.py  event.py  example.py  example2.py  external.py  fsm.py  fsm_example.py  humanintheloop.py  join.py  kill_behavior.py  modify.py  muc.py  p2pTestCase.py  performance.py  periodic_example.py  ping.py  presence_subscribe_friends.py  pubsub_events.py  receptor.py  register.py  register_account.py  roster_browser.py  rpc.py  rpc_client_side.py  (+17 more)
itests/: test_basic_connect_and_message.py  test_blocking.py  test_bob.py  test_chatmarkers.py  test_disco.py  test_httpupload.py  test_ibb.py  test_last_activity.py  test_mam.py  test_muc.py  test_ping.py  test_retract.py  test_tls_check.py  test_vcard_avatar.py  test_version.py
libspade/: Agent.py  BasicFipaDateTime.py  DF.py  spade_backend.py
munkware/: __init__.py  mwQueue.py
server/: README
services/: echo.py  ping.py
slixmpp/: basexmpp.py  clientxmpp.py  componentxmpp.py  pluginsdict.py  stringprep.py  version.py
spade/: ACLMessage.py  ACLParser.py  AID.py  AMS.py  Agent.py  BasicFipaDateTime.py  Behaviour.py  DF.py  ECLiPSeKB.py  Envelope.py  FIPAMessage.py  FlexQueue.py  Flora2KB.py  MTP.py  MessageReceiver.py  Organization.py  Organization_new.py  Platform.py  RDF0Parser.py  RPC.py  ReceivedObject.py  SIMBA.py  SL0Parser.py  SPARQLKB.py  SWIKB.py  SpadeConfigParser.py  Unit.py  Unit_new.py  XMLCodec.py  XSBKB.py  __init__.py  agent.py  bdi.py  behaviour.py  cli.py  colors.py  container.py  content.py  dblite.py  diagram.py  (+31 more)
stack_thread/: Makefile  mymod.c  pythread.h  stack_thread.c  stack_thread_wrap.c  stackthread.c  test.py  thread_pthread.h  threadmodule.c
swi/: controllers.py  model.py  release.py
templates/: 404.pyra  501.pyra  503.pyra  admin.pyra  agents.pyra  footer.pyra  header.pyra  header_platform.pyra  log.pyra  magwood.css  master.html  message.pyra  messages.pyra  quirksmode.css  search.pyra  services.pyra  table_blue.css  webadmin-old.kid  webadmin.pyra  webadmin_indigo.pyra
test/: aidTestCase.py  amsTestCase.py  basicTestCase.py  bdiTestCase.py  behaviourTestCase.py  coTestCase.py  dadTestCase.py  dfTestCase.py  eventbehavTestCase.py  factsTestCase.py  httpTestCase.py  jsonTestCase.py  kbTestCase.py  p2pTestCase.py  pubsubTestCase.py  rpcTestCase.py  socialTestCase.py  tbcbpTestCase.py  templateTestCase.py  unittests_spade.xml  unittests_xmppd.xml  xfTestCase.py
tests/: __init__.py  conftest.py  factories.py  hello.html  test_agent.py  test_behaviour.py  test_container.py  test_e2e.py  test_message.py  test_plugin.py  test_presence.py  test_presence_manager.py  test_spade.py  test_stanza_base.py  test_stanza_presence.py  test_stanza_xep_0009.py  test_stanza_xep_0055.py  test_stanza_xep_0059.py  test_stanza_xep_0122.py  test_stanza_xep_0184.py  test_stanza_xep_0292.py  test_stanza_xep_0325.py  test_stanza_xep_0356.py  test_stanza_xep_0369.py  test_stanza_xep_0402.py  test_stanza_xep_0421.py  test_stanza_xep_0422.py  test_stanza_xep_0444.py  test_stanza_xep_0461.py  test_stanza_xep_0482.py  test_stream.py  test_stream_exceptions.py  test_stream_xep_0055.py  test_stream_xep_0077.py  test_stream_xep_0092.py  test_stream_xep_0100.py  test_stream_xep_0128.py  test_stream_xep_0325.py  test_stream_xep_0356.py  test_stream_xep_0461.py  (+4 more)
tlslite/: TLSRecordLayer.py  VerifierDB.py  mathtls.py  messages.py
tlslite-0.3.5/: readme.txt
xmpp/: auth.py  browser.py  client.py  commands.py  debug.py  dispatcher.py  protocol.py  roster.py  session.py  simplexml.py  transports.py
xmppd/: README  __init__.py  acc.py  accPlugin.py  ch.py  component.py  config.py  console.py  constants.py  db_fake.py  filter.py  generate-cert.py  jep0077.py  jep0078.py  locales.py  mifiltro.py  muc.py  roster.py  router.py  server.py  stanza_queue.py  stream.py  thx1138.pem  xmppd.cfg  xmppd.pem  xmppd.py  xmppd.xml
(+2716 files in other folders)
