[tool.poetry]
name = "spade"
version = "3.3.3"
description = "Smart Python Agent Development Environment"
authors = ["Javi Palanca <jpalanca@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/javipalanca/spade"
repository = "https://github.com/javipalanca/spade"
keywords = ["spade"]
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Internet :: XMPP',
    ]

packages = [
    { include = "spade", from = "spade" },
    { include = "templates", from = "spade" }
]

[tool.poetry.dependencies]
python = "^3.8"
multidict = "5.2.0"
pyasn1-modules = "0.2.8"
pyasn1 = "0.4.8"
slixmpp = "1.8.5"
aiohttp = "3.10.5"
aiohttp_jinja2 = "1.6"
jinja2 = "3.0.3"
jinja2-time = "0.2.0"
timeago = "1.0.16"
singletonify = "0.2.4"
pytz = "2022.1"

[tool.poetry.dev-dependencies]
pip = "21.2.2"
bump2version = "1.0.1"
wheel = "0.37.1"
watchdog = "2.1.9"
flake8 = "3.9.2"
tox = "3.25.1"
coverage = "7.2.1"
Sphinx = "5.1.0"
twine = "3.8.0"
pyyaml = "6.0.2"
pytest = "8.3.2"
pytest-runner = "5.3.2"
pytest-asyncio = "0.16.0"
pytest-cov = "3.0.0"
pytest-mock = "3.6.1"
python-coveralls = "2.9.3"
requests = "2.27.1"
parsel = "1.6.0"
sphinx_rtd_theme = "1.0.0"
testfixtures = "7.0.0"
pytest-aiohttp = ">=0.3.0"
factory-boy = "3.2.1"
click = "8.0.3"

[tool.poetry.scripts]
spade = "spade.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"