[build-system]
requires = [
    "setuptools>=70.0",
    "wheel",
    "build"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "spade"
dynamic = ["version", "dependencies"]
description = "Smart Python Agent Development Environment"
authors = [{ name = "Javi Palanca", email = "jpalanca@gmail.com" }]
maintainers = [{ name = "Javi Palanca", email = "jpalanca@gmail.com" }]
license = {text = "MIT"}
readme = "README.rst"
keywords = ["spade"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: XMPP"
]

[project.urls]
Homepage = "https://spadeagents.eu"
Repository = "https://github.com/javipalanca/spade"
Documentation = "http://spade-mas.readthedocs.io/"

[project.scripts]
spade = "spade.cli:cli"

[tool.setuptools]
packages = ["spade"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "spade.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
spade = ["templates/*"]

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E501"]
line-length = 88
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["spade"]